--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" class="w-full h-full">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<!-- TODO: Package the font with the application -->
+		<link
+			href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap"
+			rel="stylesheet"
+		/>
 		<title>Abicus</title>
 	</head>
 
-	<body>
+	<body class="w-full h-full flex justify-center items-center">
 		<div id="root"></div>
 		<script type="module" src="/src/main.tsx"></script>
 	</body>
