--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="w-full h-full font-[Jost]">
+<html lang="en" class="w-full h-full">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,7 +11,7 @@
 	</head>
 
 	<body class="w-full h-full flex justify-center items-center">
-		<div id="root"></div>
+		<div id="root" class="w-full h-full bg-grey-050 place-content-center grid"></div>
 		<script type="module" src="/src/main.tsx"></script>
 	</body>
 </html>
